--- a/source/_assets/css/_search.css
+++ b/source/_assets/css/_search.css
@@ -6,69 +6,57 @@
 
     @screen lg {
         &:focus {
-            @apply .w-2/3;
+            @apply w-2/3;
         }
     }
 
     @screen xl {
         &:focus {
-            @apply .w-3/4;
+            @apply w-3/4;
         }
     }
 
     &__wrapper {
-        @apply absolute;
-        @apply bg-white;
-        @apply mt-8;
-        @apply left-0;
-        @apply top-0;
-        @apply px-4;
-        @apply w-full;
-        @apply z-10;
+        @apply absolute top-0 left-0 z-10 w-full px-4 mt-8 bg-white;
 
         @screen md {
-            @apply mt-0;
-            @apply px-0;
-            @apply relative;
+            @apply relative px-0 mt-0;
         }
     }
 }
 
 .algolia-autocomplete {
-    @apply .text-right;
-    @apply .w-full;
+    @apply w-full text-right;
 
     .ds-dropdown-menu {
-        @apply .w-full;
+        @apply w-full;
 
         max-width: 750px !important;
         min-width: auto !important;
 
         .algolia-docsearch-suggestion {
             .algolia-docsearch-suggestion--content {
-                @apply .w-full;
+                @apply w-full;
 
                 @screen md {
-                    @apply .w-2/3;
+                    @apply w-2/3;
                 }
             }
 
             .algolia-docsearch-suggestion--text {
-                @apply .font-normal;
-
+                @apply font-normal;
                 line-height: 1.4;
             }
 
             .algolia-docsearch-suggestion--wrapper {
-                @apply .py-3;
+                @apply py-3;
             }
 
             .algolia-docsearch-suggestion--subcategory-column {
-                @apply .hidden;
+                @apply hidden;
 
                 @screen md {
-                    @apply .w-1/3;
-                    @apply .inline-block;
+                    @apply inline-block w-1/3;
                 }
             }
         }
